--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -24,26 +24,28 @@ unbind "'"
 bind-key C-a    last-window
 bind-key |      split-window -h
 bind-key \      split-window -h
-bind-key -      split-window -v
+bind-key _      split-window -v
 bind-key x      kill-pane
 bind-key X      kill-window
 bind-key q      confirm-before kill-session
 bind-key Q      confirm-before kill-server
-bind-key ,      previous-window # <
-bind-key .      next-window     # >
+bind-key ,      previous-window
+bind-key .      next-window
 bind-key <      swap-window -t :-
 bind-key >      swap-window -t :+
-bind-key n      command-prompt 'rename-window %%'
-bind-key N      command-prompt 'rename-session %%'
+bind-key r      command-prompt 'rename-window %%'
+bind-key R      command-prompt 'rename-session %%'
 bind-key Escape copy-mode -u
-bind-key Up     copy-mode -u
-bind-key r      source-file ~/.tmux.conf
-bind-key R      refresh-client
-bind-key a      send-key C-a
+bind-key i      copy-mode -u
+bind-key s      source-file ~/.tmux.conf
 bind-key C-l    resize-pane -L 5
 bind-key C-h    resize-pane -R 5
 bind-key C-j    resize-pane -D 5
 bind-key C-k    resize-pane -U 5
+bind-key h      select-pane -L
+bind-key j      select-pane -D
+bind-key k      select-pane -U
+bind-key l      select-pane -R
 
 # set window number start at 1
 set -g base-index 1
@@ -55,4 +57,3 @@ setw -g aggressive-resize off
 set-window-option -g mode-keys vi
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 source "$HOME/.tmux.theme"
-
