semi-colon is better than dot for azerty

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -12,7 +12,7 @@ unbind C-b
 unbind C-a
 unbind %
 unbind ,
-unbind .
+unbind ;
 unbind n
 unbind p
 unbind [
@@ -30,7 +30,7 @@ bind-key X      kill-window
 bind-key q      confirm-before kill-session
 bind-key Q      confirm-before kill-server
 bind-key ,      previous-window
-bind-key .      next-window
+bind-key ;      next-window
 bind-key <      swap-window -t :-
 bind-key >      swap-window -t :+
 bind-key r      command-prompt 'rename-window %%'
