improvements on dtmux to select folders and on shortcuts

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -21,12 +21,13 @@ unbind l
 unbind &
 unbind "'"
 
+bind-key t      new-window
 bind-key C-a    last-window
 bind-key |      split-window -h
 bind-key \      split-window -h
 bind-key _      split-window -v
 bind-key x      kill-pane
-bind-key X      kill-window
+bind-key w      kill-window
 bind-key q      confirm-before kill-session
 bind-key Q      confirm-before kill-server
 bind-key ,      previous-window
