unbind arrow keys to change to change pane

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -20,6 +20,10 @@ unbind '"'
 unbind l
 unbind &
 unbind "'"
+unbind up
+unbind left
+unbind right
+unbind bottom
 
 bind-key t      new-window
 bind-key C-a    last-window
