BugFix down and not bottom

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -23,7 +23,7 @@ unbind "'"
 unbind up
 unbind left
 unbind right
-unbind bottom
+unbind down
 
 bind-key t      new-window
 bind-key C-a    last-window
