no need for this tmux shortcut

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -3,9 +3,7 @@ source /usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.
 set-option -g default-terminal "screen-256color"
 
 # Perosnal configuration
-unbind-key C-b
-bind-key C-a send-prefix
-set-option -g prefix C-s
+set-option -g prefix C-f
 
 # keybindings
 unbind C-b
@@ -23,7 +21,8 @@ unbind "'"
 unbind up
 unbind left
 unbind right
-unbind bottom
+unbind down
+unbind {
 
 bind-key t      new-window
 bind-key C-a    last-window
@@ -43,10 +42,7 @@ bind-key R      command-prompt 'rename-session %%'
 bind-key Escape copy-mode -u
 bind-key i      copy-mode -u
 bind-key s      source-file ~/.tmux.conf
-bind-key C-l    resize-pane -L 5
-bind-key C-h    resize-pane -R 5
-bind-key C-j    resize-pane -D 5
-bind-key C-k    resize-pane -U 5
+bind-key S      swap-pane -U
 bind-key h      select-pane -L
 bind-key j      select-pane -D
 bind-key k      select-pane -U
