add of new configuration for terminal_velocity and improvement of the setup

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -54,6 +54,9 @@ set -g base-index 1
 # resize to smallest active client
 setw -g aggressive-resize off
 
+# augment the buffer size for the scroll back
+set-option -g history-limit 10000
+
 # enable mouse
 set-window-option -g mode-keys vi
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
