--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -1,5 +1,5 @@
 # POWERLINE
-source /home/paul/.pyenv/versions/3.6.5/envs/tools3/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
+source /usr/local/lib/python3.6/dist-packages/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
 
 # Perosnal configuration
