removed unused lines and add the mouse support for tmux

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -1,5 +1,4 @@
 # POWERLINE
-# source /usr/local/lib/python3.6/dist-packages/powerline/bindings/tmux/powerline.conf
 set-option -g default-terminal "screen-256color"
 
 # Perosnal configuration
@@ -58,6 +57,7 @@ setw -g aggressive-resize off
 set-option -g history-limit 10000
 
 # enable mouse
-set-window-option -g mode-keys vi
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+set -g mouse on
+
+# enable the tmux theme
 source "$HOME/.tmux.theme"
