add of copy to clipboard with mouse in tmux

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -56,8 +56,13 @@ setw -g aggressive-resize off
 # augment the buffer size for the scroll back
 set-option -g history-limit 10000
 
-# enable mouse
+# enable mouse and copy to clipboard by mouse selection
 set -g mouse on
+set-option -s set-clipboard off
+bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -se c -i"
+
+# use a vim-like navigation
+set-window-option -g mode-keys vi
 
 # enable the tmux theme
 source "$HOME/.tmux.theme"
