--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -59,7 +59,7 @@ set-option -g history-limit 10000
 # enable mouse and copy to clipboard by mouse selection
 set -g mouse on
 set-option -s set-clipboard off
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -se c -i"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
 
 # use a vim-like navigation
 set-window-option -g mode-keys vi
