--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -59,7 +59,11 @@ set-option -g history-limit 10000
 # enable mouse and copy to clipboard by mouse selection
 set -g mouse on
 set-option -s set-clipboard off
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"
+if-shell -b '[ "$(uname)" = "Linux" ]' \
+    'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"'
+if-shell -b '[ "$(uname)" = "Darwin" ]' \
+    'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"'
+    # bind-key -Tcopy-mode-vi Y send -X copy-pipe "pbcopy"
 
 # use a vim-like navigation
 set-window-option -g mode-keys vi
