--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -51,7 +51,7 @@ bind-key l      select-pane -R
 set -g base-index 1
 
 # resize to smallest active client
-setw -g aggressive-resize off
+set-window-option -g aggressive-resize off
 
 # augment the buffer size for the scroll back
 set-option -g history-limit 10000
@@ -63,7 +63,10 @@ if-shell -b '[ "$(uname)" = "Linux" ]' \
     'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -se c -i"'
 if-shell -b '[ "$(uname)" = "Darwin" ]' \
     'bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"'
-    # bind-key -Tcopy-mode-vi Y send -X copy-pipe "pbcopy"
+
+# enable activity alerts
+set-window-option -g monitor-activity on
+set -g visual-activity on
 
 # use a vim-like navigation
 set-window-option -g mode-keys vi
