open new pane/window in tmux in the same folder for convenience

--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -23,11 +23,12 @@ unbind right
 unbind down
 unbind {
 
-bind-key t      new-window
+bind-key t      new-window -c '#{pane_current_path}'
 bind-key C-a    last-window
-bind-key |      split-window -h
-bind-key \      split-window -h
-bind-key _      split-window -v
+bind-key |      split-window -h -c '#{pane_current_path}'
+bind-key \      split-window -h -c '#{pane_current_path}'
+bind-key _      split-window -v -c '#{pane_current_path}'
+bind-key -      split-window -v -c '#{pane_current_path}'
 bind-key x      kill-pane
 bind-key w      kill-window
 bind-key q      confirm-before kill-session
@@ -54,7 +55,7 @@ set -g base-index 1
 set-window-option -g aggressive-resize off
 
 # augment the buffer size for the scroll back
-set-option -g history-limit 10000
+set-option -g history-limit 100000
 
 # enable mouse and copy to clipboard by mouse selection
 set -g mouse on
