--- a/conf/tmux.conf
+++ b/conf/tmux.conf
@@ -1,7 +1,7 @@
 # POWERLINE
 set-option -g default-terminal "screen-256color"
 
-# Perosnal configuration
+# Personal configuration
 set-option -g prefix C-f
 
 # keybindings
@@ -21,7 +21,6 @@ unbind up
 unbind left
 unbind right
 unbind down
-unbind {
 
 bind-key t      new-window -c '#{pane_current_path}'
 bind-key C-a    last-window
